force rank to be upper case

--- a/cards.css
+++ b/cards.css
@@ -104,6 +104,7 @@ cards card suit {
     display: block;
     line-height: 1;
     text-align: left;
+    text-transform: uppercase;
 }
 cards card rank {
 }
